--- a/gradle.properties
+++ b/gradle.properties
@@ -32,7 +32,7 @@ mod_id=multiyggdrasil
 # The human-readable display name for the mod.
 mod_name=MultiYggdrasil
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=AGPL-3.0
+mod_license=AGPL-3.0-or-later
 # The mod version. See https://semver.org/
 mod_version=0.2.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
