--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.daemon=true
-org.gradle.parallel=true
-org.gradle.caching=true
-org.gradle.configuration-cache=true
 
-#read more on this at https://github.com/neoforged/ModDevGradle?tab=readme-ov-file#better-minecraft-parameter-names--javadoc-parchment
-# you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
-parchment_minecraft_version=1.21.6
-parchment_mappings_version=2025.06.29
+# In the case that Gradle needs to fork to recompile, this will set the memory for that process.
+systemProp.net.minecraftforge.gradle.repo.recompile.fork=true
+systemProp.net.minecraftforge.gradle.repo.recompile.fork.args=-Xmx5G
+
+# Opts-out of ForgeGradle automatically adding mavenCentral(), Forge's maven and MC libs maven to the repositories block
+systemProp.net.minecraftforge.gradle.repo.attach=false
+
 # Environment Properties
 # You can find the latest versions here: https://projects.neoforged.net/neoforged/neoforge
 # The Minecraft version must agree with the Neo version to get a valid artifact
@@ -18,12 +18,15 @@ minecraft_version=1.21.7
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.20.2, 1.21.7]
 minecraft_versions=1.20.2,1.20.3,1.20.4,1.20.5,1.20.6,1.21,1.21.1,1.21.2,1.21.3,1.21.4,1.21.5,1.21.6,1.21.7
-# The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=21.7.4-beta
-# The Neo version range can use any version of Neo as bounds
-neo_version_range=*
-# The loader version range can only use the major version of FML as bounds
-loader_version_range=[1,)
+# The Forge version must agree with the Minecraft version to get a valid artifact
+forge_version=57.0.2
+# The Forge version range can use any version of Forge as bounds or match the loader version range
+forge_version_range=[0,)
+# The loader version range can only use the major version of Forge/FML as bounds
+loader_version_range=[0,)
+# The mapping version to query from the mapping channel.
+# This must match the format required by the mapping channel.
+mapping_version=2025.06.29-1.21.6
 
 ## Mod Properties
 
